# patch

./: .gitignore  CLAUDE.md  README.md  build-all.sh  meson.build  requirements.txt
.forgejo/workflows/: ci.yml  publish.yml
.github/workflows/: flatpak.yml
build-aux/flatpak/: land.rob.patch.json  python3-deps.json
data/: contacts.json.example  land.rob.patch.desktop.in  land.rob.patch.gschema.xml  land.rob.patch.metainfo.xml.in  land.rob.patch.service.in  meson.build  patch-warm-resident.service.example
data/ui/: account-dialog.blp  add-contact-dialog.blp  call-dialog.blp  dialer.blp  group-contacts-dialog.blp  help-overlay.blp  land.rob.patch.gresource.xml  meson.build  messages.blp  new-message-dialog.blp  preferences-dialog.blp  style.css  voicemail.blp  window.blp
plugin/: README.md  calls-xmpp.plugin.in.in  meson.build  meson.options
plugin/src/: calls-xmpp-call.c  calls-xmpp-call.h  calls-xmpp-origin.c  calls-xmpp-origin.h  calls-xmpp-provider.c  calls-xmpp-provider.h  meson.build
po/: POTFILES.in  meson.build
src/patch/: __init__.py  __main__.py  account.py  audio.py  avatars.py  calls.py  calls_dbus.py  contacts.py  jingle_session.py  logging_setup.py  main.py  meson.build  message_persister.py  notifications.py  numfmt.py  patch.in  ringer.py  window.py
src/patch/dialogs/: account_dialog.py  add_contact_dialog.py  adhoc_dialog.py  call_dialog.py  group_contacts_dialog.py  new_message_dialog.py  preferences_dialog.py  reaction_picker.py
src/patch/pages/: dialer.py  messages.py  voicemail.py
src/patch/push/: connector.py  controller.py  decrypt.py  distributor.py  enable_iq.py  keys.py
src/patch/store/: db.py  secrets.py
src/patch/xmpp/: client.py  jingle.py  turn.py
tests/: test_db.py  test_decrypt.py  test_jingle.py  test_numfmt.py
